--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,151 @@
-amqp==5.1.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.8.1
+apturl==0.5.2
 asgiref==3.6.0
-billiard==4.1.0
-celery==5.3.0
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.9.0
+backcall==0.2.0
+blinker==1.4
+braintree==4.17.1
+Brlapi==0.8.3
+Brotli==1.0.9
 certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-crispy-bootstrap5==0.7
-cryptography==40.0.2
+chardet==4.0.0
+charset-normalizer==2.1.1
+click==8.0.3
+colorama==0.4.4
+comm==0.1.3
+command-not-found==0.3
+cryptography==39.0.0
+cssselect2==0.7.0
+cupshelpers==1.0
+dbus-python==1.2.18
+debugpy==1.6.7
+decorator==5.1.1
+defer==1.0.6
 defusedxml==0.7.1
-Django==4.2
-django-allauth==0.54.0
-django-crispy-forms==2.0
-flower==1.2.0
-gunicorn==20.1.0
-humanize==4.6.0
+distlib==0.3.5
+distro==1.7.0
+distro-info===1.1build1
+Django==4.1.5
+django-allauth==0.52.0
+django-ckeditor==6.5.1
+django-crispy-forms==1.14.0
+django-js-asset==2.0.0
+django-phonenumber-field==7.0.1
+django-taggit==3.1.0
+djangorestframework==3.14.0
+executing==1.2.0
+filelock==3.7.1
+Flask==2.1.3
+Flask-Migrate==3.1.0
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+fonttools==4.38.0
+frozenlist==1.3.3
+greenlet==1.1.2
+gyp==0.1
+html5lib==1.1
+httplib2==0.20.2
 idna==3.4
-kombu==5.3.1
+ifaddr==0.1.7
+importlib-metadata==4.6.4
+ipykernel==6.22.0
+ipython==8.12.0
+itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.7.1
+Jinja2==3.1.2
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.2.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+more-itertools==8.10.0
+multidict==6.0.4
+nest-asyncio==1.5.6
+netifaces==0.11.0
 oauthlib==3.2.2
-Pillow==9.5.0
-prometheus-client==0.17.0
+olefile==0.46
+openai==0.27.8
+packaging==23.0
+parso==0.8.3
+pexpect==4.8.0
+phonenumbers==8.13.2
+phonenumberslite==8.13.2
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==2.5.2
 prompt-toolkit==3.0.38
-psycopg2-binary==2.9.6
+protobuf==3.12.4
+psutil==5.9.4
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycairo==1.20.1
+PyChromecast==9.4.0
 pycparser==2.21
+pycups==2.0.1
+pydyf==0.5.0
+Pygments==2.14.0
+PyGObject==3.42.1
 PyJWT==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyphen==0.13.2
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.2
+python-debian===0.1.43ubuntu1
 python3-openid==3.2.0
-pytz==2023.3
-requests==2.29.0
+pytz==2022.7
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==25.0.2
+reportlab==3.6.8
+requests==2.28.1
 requests-oauthlib==1.3.1
+SecretStorage==3.3.1
 six==1.16.0
-sqlparse==0.4.4
-tornado==6.3.2
-tzdata==2023.3
-urllib3==1.26.15
-vine==5.0.0
+SQLAlchemy==1.4.39
+sqlparse==0.4.3
+stack-data==0.6.2
+systemd-python==234
+tinycss2==1.2.1
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2022.7
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.13
+virtualenv==20.15.1
+wadllib==1.3.6
 wcwidth==0.2.6
+weasyprint==57.2
+webencodings==0.5.1
+Werkzeug==2.2.0
+whitenoise==6.2.0
+WTForms==3.0.1
+xdg==5
+xkit==0.0.0
+yarl==1.9.2
+zeroconf==0.38.3
+zipp==1.0.0
+zopfli==0.2.2
