--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 alembic==1.8.1
+amqp==5.1.1
 apturl==0.5.2
 asgiref==3.6.0
 asttokens==2.2.1
@@ -8,18 +9,27 @@ async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.9.0
 backcall==0.2.0
+billiard==4.1.0
 blinker==1.4
 braintree==4.17.1
 Brlapi==0.8.3
 Brotli==1.0.9
+casttube==0.2.1
+celery==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
 chardet==4.0.0
 charset-normalizer==2.1.1
-click==8.0.3
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.4
 comm==0.1.3
 command-not-found==0.3
+coreapi==2.3.3
+coreschema==0.0.4
+crispy-bootstrap5==0.7
 cryptography==39.0.0
 cssselect2==0.7.0
 cupshelpers==1.0
@@ -35,6 +45,7 @@ Django==4.1.5
 django-allauth==0.52.0
 django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
+django-filter==23.2
 django-js-asset==2.0.0
 django-phonenumber-field==7.0.1
 django-taggit==3.1.0
@@ -49,7 +60,6 @@ Flask-WTF==0.14.3
 fonttools==4.38.0
 frozenlist==1.3.3
 greenlet==1.1.2
-gyp==0.1
 html5lib==1.1
 httplib2==0.20.2
 idna==3.4
@@ -58,12 +68,14 @@ importlib-metadata==4.6.4
 ipykernel==6.22.0
 ipython==8.12.0
 itsdangerous==2.1.2
+itypes==1.2.0
 jedi==0.18.2
 jeepney==0.7.1
 Jinja2==3.1.2
 jupyter_client==8.1.0
 jupyter_core==5.3.0
 keyring==23.5.0
+kombu==5.3.1
 language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
@@ -71,6 +83,7 @@ lazr.uri==1.0.6
 louis==3.20.0
 macaroonbakery==1.3.1
 Mako==1.2.1
+Markdown==3.4.3
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 more-itertools==8.10.0
@@ -125,6 +138,7 @@ sqlparse==0.4.3
 stack-data==0.6.2
 systemd-python==234
 tinycss2==1.2.1
+tk==0.1.0
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
@@ -134,7 +148,9 @@ ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
 unattended-upgrades==0.1
+uritemplate==4.1.1
 urllib3==1.26.13
+vine==5.0.0
 virtualenv==20.15.1
 wadllib==1.3.6
 wcwidth==0.2.6
