--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY = 'jfdfjvfbj-django-insecure-5j4sd1rq__gy!ad97kl39%r*^dqbr)3m=na-*nm$
 DEBUG = False
 
 #DB
-DB_NAME = 'vs'
+DB_NAME = 'main'
 DB_USER = 'vstech_admin'
 DB_PASSWORD = 'Starbase@1234#'
 DB_HOST = 'sb-db-server.postgres.database.azure.com'
